# maharook

./: .gitignore  HACKATHON_DEMO.md  LOGGING_QUICK_REFERENCE.md  README.md  ROOK_MODELS_USAGE.md  STRUCTURED_LOGGING_SUMMARY.md  STRUCTURED_LOGGING_USAGE.md  frontend_example.html  minimal_tracking_server.py  pyproject.toml  real_market_rook.py  rook_backend_server.py  run_rook_models.py  simple_log_server.py  simple_tracking_server.py  test_websocket_client.py  test_ws_simple.py  tracking_server.py
config/: config.yaml  contracts.yaml  rook_defaults.yaml  rook_eth_usdc.yaml  tokens.yaml
examples/: structured_logging_demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentOrb.tsx  FloatingTxHash.tsx  SidePanel.tsx  TradingArena.tsx  TradingFloor.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: trading.ts
maharook/: __init__.py
maharook/agents/rook/: __init__.py  agent.py  brain.py  executor.py  portfolio.py  strategy.py  swapper.py
maharook/blockchain/: __init__.py  client.py
maharook/core/: __init__.py  agent_registry.py  config.py  exceptions.py  logging.py  metrics.py
pay402/: buyer.js  package-lock.json  package.json  seller.js
run_agent/: README.md
run_agent/configs/: rook_finr1_ollama.yaml  rook_qwen_lora.yaml  rook_qwen_ollama.yaml
run_agent/utils/: __init__.py  config_validator.py  model_loader.py
testing/: README.md  rook_fork_tester.py
tests/: __init__.py
tests/unit/: test_constitutional_compliance.py
training/: FLUENCE_DEPLOYMENT_GUIDE.md  README.md  test_lora_simple.py
training/configs/: data_driven_heuristics.json  relaxed_heuristics.json
training/data/processed/: core_conditions.csv  core_features.csv  feature_info.txt  labeled_dataset.csv  labeling_stats.txt  metadata.json  normalization.json
training/inference/: trained_brain.py
training/scripts/: convert_finr1_gguf_to_hf.py  dataset.py  deploy_adapter.py  feature_pipeline.py  fluence_deploy.py  fluence_quickstart.sh  heuristics.py  qwen25_lora_train.py  setup_linux_training.sh  train_finr1_cpu.py  train_finr1_unsloth.py  train_lora_rook.py  train_mlx_lora.py  train_rook.py  transfer_to_linux.sh
