[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maharook"
version = "0.1.0"
description = "Agentic Trading Arena for DeFi - Built on Uniswap v4 with specialized AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maharook Team"}
]
keywords = ["defi", "trading", "ai", "agents", "uniswap", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "PyYAML>=6.0.0",
    # Blockchain dependencies
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    # Data processing
    "polars>=0.20.0",
    "duckdb>=0.9.0",
    # UI and CLI
    "rich>=13.0.0",
    "click>=8.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "peft>=0.17.1",
    "accelerate>=1.10.1",
    "mlx>=0.29.2",
    "mlx-lm>=0.28.1",
    "stable-baselines3>=2.7.0",
    "gymnasium>=1.2.1",
    "tokenizers>=0.22.1",
    "openai>=1.109.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ollama>=0.6.0",
    "requests>=2.32.5",
    "uniswap-universal-router-decoder>=2.0.0",
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "numpy>=1.24.0",
]

llm = [
    "openai>=1.0.0",
    "ollama>=0.2.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
]

[project.scripts]
maharook = "maharook.cli:main"
rook = "maharook.agents.rook.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/maharook"
Repository = "https://github.com/yourusername/maharook"
Documentation = "https://maharook.readthedocs.io"
"Bug Reports" = "https://github.com/yourusername/maharook/issues"

[tool.hatch.build.targets.wheel]
packages = ["maharook"]

[tool.hatch.build.targets.sdist]
include = [
    "/maharook",
    "/config",
    "/tests",
    "/training",
    "/data",
]

# Development tools configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "B905",  # zip strict=True
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "web3.*",
    "eth_account.*",
    "polars.*",
    "duckdb.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=maharook",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["maharook"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-setuptools>=80.9.0.20250822",
]
